--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
             <a href="/blog">Blog</a>
         </h1>
         <h5>
-            <a href="/newpost">Create a new blog post</a>
+            <a href="/blog/newpost">Create a new blog post</a>
         </h5>
 
         {% block content %}
